packages/wasm/ballerina-lang-go/parser/testdata/tokens/error/error-negative-project/modules/module1/module1.token
(public 6 0x00 ())
(type 4 0x00 ())
(ident, "E1" 2 0x00 ())
(distinct 8 0x00 ())
(error 5 0x00 ())
(; 1 0x00 ())
(public 6 0x00 ())
(type 4 0x00 ())
(ident, "E2" 2 0x00 ())
(distinct 8 0x00 ())
(error 5 0x00 ())
(; 1 0x00 ())
(type 4 0x00 ())
(ident, "E3" 2 0x00 ())
(distinct 8 0x00 ())
(error 5 0x00 ())
(; 1 0x00 ())
(type 4 0x00 ())
(ident, "E4" 2 0x00 ())
(distinct 8 0x00 ())
(error 5 0x00 ())
(; 1 0x00 ())
(type 4 0x00 ())
(ident, "E5" 2 0x00 ())
(ident, "E1" 2 0x00 ())
(& 1 0x00 ())
(ident, "E2" 2 0x00 ())
(; 1 0x00 ())
(type 4 0x00 ())
(ident, "E6" 2 0x00 ())
(ident, "E3" 2 0x00 ())
(& 1 0x00 ())
(ident, "E4" 2 0x00 ())
(; 1 0x00 ())
(type 4 0x00 ())
(ident, "E7" 2 0x00 ())
(ident, "E1" 2 0x00 ())
(& 1 0x00 ())
(ident, "E4" 2 0x00 ())
(; 1 0x00 ())
(type 4 0x00 ())
(ident, "E8" 2 0x00 ())
(ident, "E1" 2 0x00 ())
(| 1 0x00 ())
(ident, "E2" 2 0x00 ())
(; 1 0x00 ())
(type 4 0x00 ())
(ident, "E9" 2 0x00 ())
(ident, "E3" 2 0x00 ())
(| 1 0x00 ())
(ident, "E4" 2 0x00 ())
(; 1 0x00 ())
(type 4 0x00 ())
(ident, "E10" 3 0x00 ())
(ident, "E1" 2 0x00 ())
(| 1 0x00 ())
(ident, "E4" 2 0x00 ())
(; 1 0x00 ())
(public 6 0x00 ())
(type 4 0x00 ())
(ident, "E5_Public" 9 0x00 ())
(ident, "E1" 2 0x00 ())
(& 1 0x00 ())
(ident, "E2" 2 0x00 ())
(; 1 0x00 ())
(public 6 0x00 ())
(type 4 0x00 ())
(ident, "E6_Public" 9 0x00 ())
(ident, "E3" 2 0x00 ())
(& 1 0x00 ())
(ident, "E4" 2 0x00 ())
(; 1 0x00 ())
(public 6 0x00 ())
(type 4 0x00 ())
(ident, "E7_Public" 9 0x00 ())
(ident, "E1" 2 0x00 ())
(& 1 0x00 ())
(ident, "E4" 2 0x00 ())
(; 1 0x00 ())
(public 6 0x00 ())
(type 4 0x00 ())
(ident, "E8_Public" 9 0x00 ())
(ident, "E1" 2 0x00 ())
(| 1 0x00 ())
(ident, "E2" 2 0x00 ())
(; 1 0x00 ())
(public 6 0x00 ())
(type 4 0x00 ())
(ident, "E9_Public" 9 0x00 ())
(ident, "E3" 2 0x00 ())
(| 1 0x00 ())
(ident, "E4" 2 0x00 ())
(; 1 0x00 ())
(public 6 0x00 ())
(type 4 0x00 ())
(ident, "E10_Public" 10 0x00 ())
(ident, "E1" 2 0x00 ())
(| 1 0x00 ())
(ident, "E4" 2 0x00 ())
(; 1 0x00 ())
(2 0 0x00 ())
